After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689195 - Right click on overview doesn't display check boxes
Right click on overview doesn't display check boxes
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: UI
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Pierre-Yves Luyten
Depends on:
Blocks:
 
 
Reported: 2012-11-28 03:08 UTC by alex diavatis
Modified: 2012-11-28 23:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description alex diavatis 2012-11-28 03:08:56 UTC
If I right click on Notes Overview, the control panel is displayed but not the check boxes to make the selection. However right click selects the current item I click on.
Comment 1 Pierre-Yves Luyten 2012-11-28 09:15:02 UTC
Hello, thanks for the report. I could not reproduce it, using steps

1. Open bijiben
2. Click on selection button on main toolbar top right
3. Right click on notes to select or un-select it

Did you use other steps?
Comment 2 alex diavatis 2012-11-28 13:51:50 UTC
1. Open Bijiben
2. Right click to notes to select them

Output: Check boxes are not visible.  


Without pressing selection button, right click should work as gnome-boxes. Actually it works (it makes the selection) but it doesn't display the check boxes.
Comment 3 Pierre-Yves Luyten 2012-11-28 23:05:34 UTC
Thanks for pointing at this, it's now fixed
Comment 4 alex diavatis 2012-11-28 23:10:12 UTC
Yep, it is good now.