MainView : allow to go to selection mode with right click

https://bugzilla.gnome.org/show_bug.cgi?id=689195